current page and number of page functionality added to pagination view

--- a/index.html
+++ b/index.html
@@ -106,6 +106,12 @@
            -->
         </ul>
 
+        <div class="current-page">
+          <!-- <button class="btn--inline btn-new pagination__btn--prev">
+            <span>Page 1 of 10</span>
+          </button> -->
+        </div>
+
         <div class="pagination">
           <!-- <button class="btn--inline pagination__btn--prev">
             <svg class="search__icon">
