Test and summary

--- a/index.html
+++ b/index.html
@@ -128,15 +128,15 @@
         </div>
 
         <p class="copyright">
-          &copy; Copyright by
+          Built for portfolio purposes only by
           <a
-            class="twitter-link"
+            class="github-link"
+            href="https://github.com/Lets-Prosper"
             target="_blank"
-            href="https://twitter.com/jonasschmedtman"
-            >Jonas Schmedtmann</a
-          >. Use for learning or your portfolio. Don't use to teach. Don't claim
-          as your own.
+            >Prosper Iheanacho</a
+          >
         </p>
+        <p class="copyright">Best viewed on large screens</p>
       </div>
 
       <div class="recipe">
